[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "tabletop-smith"
description = "Tool for prototyping boardgames"
authors = [
    {name = "Stanislav Nowak", email = "scolex.cz@gmail.com"},
]
dynamic = ["version"]
dependencies = [
    "pylark>=0.0.13",
    "pycairo>=1.24.0",
]
requires-python = ">=3.8.1"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]